fixed session label spacing

--- a/app/assets/stylesheets/03session_forms.scss
+++ b/app/assets/stylesheets/03session_forms.scss
@@ -109,3 +109,7 @@ text-align: center;
 .session-link {
   padding-bottom: 10px;
 }
+
+.session-label {
+  padding-bottom: 5px;
+}
